--- a/src/assets/sass/root.scss
+++ b/src/assets/sass/root.scss
@@ -13,10 +13,10 @@
 @media only screen and (min-width: 0px) {
 	/* All elements in the library derive their variables and base styles from this central sheet, simplifying site-wide edits. For instance, if you want to modify how your h2's appear across the site, you just update it once in the global styles, and the changes apply everywhere. */
 	:root {
-		--primary: #ff6a3e;
-		--primaryLight: #ffba43;
-		--secondary: #ffba43;
-		--secondaryLight: #ffba43;
+		--primary: #67923d;
+		--primaryLight: #67923d;
+		--secondary: #67923d;
+		--secondaryLight: #67923d;
 		--headerColor: #1a1a1a;
 		--bodyTextColor: #4e4b66;
 		--bodyTextColorWhite: #fafbfc;
