compressed images and changed projects

--- a/src/_includes/sections/cta.html
+++ b/src/_includes/sections/cta.html
@@ -8,8 +8,8 @@
       <span class="cs-topper">Contact Us</span>
       <h2 class="cs-title">Get It Done With Us Today</h2>
       <p class="cs-text">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis at sit
-        pellentesque molestie. Diam, adipiscing ultrices eu turpis gravida.
+         Coastal Edge Landscaping delivers quality outdoor spaces built to last. From clean, functional designs to expert construction, we make it easy to transform your yard into something you’re proud of.
+
       </p>
       <a
         href="/contact/"
