--- a/src/_includes/sections/header.html
+++ b/src/_includes/sections/header.html
@@ -40,10 +40,10 @@
                         </button>
                         <ul class="cs-drop-ul" aria-labelledby="projects-dropdown-toggle">
                             <li class="cs-drop-li">
-                                <a href="/project-one/" class="cs-li-link cs-drop-link">Project One</a>
+                                <a href="/2025-projects/" class="cs-li-link cs-drop-link">2025 Projects</a>
                             </li>
                             <li class="cs-drop-li">
-                                <a href="/project-two/" class="cs-li-link cs-drop-link">Project Two</a>
+                                <a href="/2024-projects/" class="cs-li-link cs-drop-link">2024 Projects</a>
                             </li>
                         </ul>
                     </li>
