--- a/src/_includes/sections/footer.html
+++ b/src/_includes/sections/footer.html
@@ -120,15 +120,15 @@
       <li class="cs-nav-li">
         <a
           class="cs-nav-link"
-          href="/project-one/"
-          >Project One</a
+          href="/2025-projects/"
+          >2025 Projects</a
         >
       </li>
       <li class="cs-nav-li">
         <a
           class="cs-nav-link"
-          href="/project-two/"
-          >Project Two</a
+          href="/2024-projects/"
+          >2024 Projects</a
         >
       </li>
     </ul>
